--- a/requirements.txt
+++ b/requirements.txt
@@ -91,6 +91,7 @@ flake8-warnings==0.2.1
 fonttools==4.33.3
 gitdb==4.0.9
 GitPython==3.1.27
+gunicorn
 hypothesis==6.47.0
 hypothesmith==0.1.9
 idna==2.10
