--- a/requirements.txt
+++ b/requirements.txt
@@ -91,6 +91,7 @@ flake8-warnings==0.2.1
 fonttools==4.33.3
 gitdb==4.0.9
 GitPython==3.1.27
+gunicorn
 hypothesis==6.47.0
 hypothesmith==0.1.9
 idna==2.10
@@ -146,7 +147,7 @@ removestar==1.3.1
 requests==2.23.0
 restructuredtext-lint== 1.0
 scikit-learn==1.0
-scipy==1.8.1
+scipy==1.7.3
 seaborn==0.11.2
 six==1.16.0
 smmap==5.0.0
@@ -160,7 +161,7 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
 sqlparse==0.4.3
-ssort==0.11.5
+ssort==0.10.0
 stdlib-list==0.8.0
 stevedore==3.5.0
 termcolor==1.1.0
